clusters/compute/k8s/apps/media/tautulli/app/network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tautulli
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex-meta-manager
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
